Added Some more tests